# pfad

./: .gitignore  GNUmakefile  README.md  cabal.project  default.nix  flake.nix  pfad.cabal  pfad.nix
.github/workflows/: ci.yml
bench/: Main.hs
benchmarks/: bench-pfad.hs
src/Data/PFAD/: Ch01.hs  Ch02.hs
test/: Main.hs
tests/: doctests.hs
