cabal-version:       3.0
name:                pfad
version:             0.1.0.0
synopsis:            Pearls of Functional Algorithm Design
description:         Work from Bird's "Pearls of Functional Algorithm Design"
-- license
-- license-file:
author:              Henry Till
maintainer:          henrytill@gmail.com
-- copyright:
category:            Data
build-type:          Custom
-- extra-source-files:

custom-setup
  setup-depends:       base >=4 && <5
                     , cabal-doctest >=1 && <1.1

library
  exposed-modules:     Data.PFAD.Ch01
                     , Data.PFAD.Ch02
  -- other-modules:
  -- other-extensions:
  build-depends:       base  >=4.9 && <5
                     , array >=0.5 && <0.6
  hs-source-dirs:      src
  default-language:    Haskell98

test-suite doctests
  type:                exitcode-stdio-1.0
  ghc-options:         -threaded
  main-is:             Main.hs
  build-depends:       base
                     , QuickCheck ^>=2.14
                     , template-haskell >=2.19 && <2.24
                     , doctest >=0.22.0 && <0.24
  hs-source-dirs:      test
  default-language:    Haskell98

benchmark pfad-bench
  type:                exitcode-stdio-1.0
  main-is:             Main.hs
  build-depends:       base
                     , criterion >=1.1 && <1.7
                     , pfad
  hs-source-dirs:      bench
  default-language:    Haskell98
